<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_view_category_1"
        android:title="@string/navigation_view_category_1">
        <menu>
            <item
                android:id="@+id/navigation_item_1"
                android:checked="true"
                android:icon="@drawable/home"
                android:title="@string/navigation_view_item_1" />

        </menu>
    </item>
    <item
        android:id="@+id/navigation_item_3"
        android:icon="@drawable/room"
        android:title="@string/navigation_view_item_3" />
    <item
        android:id="@+id/navigation_item_11"
        android:icon="@drawable/reunion"
        android:title="@string/navigation_view_item_11" />
    <item
        android:id="@+id/navigation_item_4"
        android:icon="@drawable/resto"
        android:title="@string/navigation_view_item_4" />
    <item
        android:id="@+id/navigation_item_5"
        android:icon="@drawable/emplacement"
        android:title="@string/navigation_view_item_5" />
    <item
    android:id="@+id/navigation_item_2"
    android:icon="@drawable/gallerie"
    android:title="@string/navigation_view_item_2" />
    <item
        android:id="@+id/navigation_item_6"
        android:icon="@drawable/promotion"
        android:title="@string/navigation_view_item_6" />
</menu>