<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Formulaire">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_formulaire1" />

        <!-- Parent linear layout with vertical orientation -->
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/back"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/image1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/logoapp" />



            <EditText
                android:id="@+id/name_edt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:hint="Nom"
                android:textColorHint="@color/jaune"

                android:textColor="@color/white"/>

            <EditText
                android:id="@+id/last_name_edt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:hint="Prénom"
                android:textColorHint="@color/jaune"

                android:textColor="@color/white"/>
            <TextView
            android:id="@+id/genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
                android:textSize="18sp"
            android:hint=" Genre"
            android:textColorHint="@color/jaune" />
            <RadioGroup
                android:id="@+id/radioSex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp">

                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="male"

                    android:textColor="@color/jaune"/>

                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="female"
                    android:textColor="@color/jaune"/>

            </RadioGroup>
            <EditText
                android:id="@+id/email_edt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:hint="Email"
                android:textColorHint="@color/jaune"

                android:textColor="@color/white"/>



            <EditText
                android:id="@+id/tele_edt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:hint="Téléphone"
                android:textColorHint="@color/jaune"

                android:textColor="@color/white"/>

            <EditText
                android:id="@+id/cin_edt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dip"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:hint="CIN"
                android:textColorHint="@color/jaune"
                android:inputType="number"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/capacite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="18sp"
                android:hint=" Capacité"
                android:textColorHint="@color/jaune" />
            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/country_prompt"
                android:background="@color/back"
                android:layout_marginLeft="10dp"/>
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
            <EditText

                android:id="@+id/checkIn"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="2dp"
                android:focusable="false"
                android:hint="de:"
                android:textColorHint="@color/jaune"
                android:inputType="date"
                android:textColor="@color/white"/>
            <ImageButton
                android:id="@+id/imageButton1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignBottom="@+id/checkIn"
                android:layout_toRightOf="@+id/checkIn"
                android:contentDescription="@string/selectdate"
                android:cropToPadding="true"
                android:src="@drawable/calendrier" />
    <EditText
        android:id="@+id/checkOut"
        android:layout_width="250dp"
        android:layout_marginLeft="10dp"
        android:layout_height="50dp"
        android:layout_marginBottom="25dp"
        android:layout_below="@+id/checkIn"
        android:focusable="false"
        android:hint="à :"
        android:textColorHint="@color/jaune"
        android:inputType="date"
        android:textColor="@color/white"/>
    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/checkOut"
        android:layout_toRightOf="@+id/checkOut"
        android:contentDescription="@string/selectdate1"
        android:cropToPadding="true"
        android:src="@drawable/calendrier" />
</RelativeLayout>





            <Button
                android:id="@+id/register_action_id"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginBottom="15dp"
                android:layout_gravity="center"
                android:background="@color/jaune"
                android:text="Valider"
                android:textSize="20dip"
                android:textColor="@color/back"
                />
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
